Modifiche novità per la gestione delle impostazioni delle stampe

--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -18,6 +18,39 @@
       <h2>🆕 Novità recenti</h2>
 
       <details open>
+        <summary>2025-09-30</summary>
+
+        <div class="card">
+          <div class="card-title">Impostazioni Stampe</div>
+          <div class="card-body">
+            <section>
+              <p>I controlli presenti nella sezione <b>Stampe</b> sono stati aggiornati e resi più rigorosi, al fine di garantire una gestione più sicura e tracciabile:</p>
+              <ul>
+                <li>È prevista una doppia conferma al momento del salvataggio quando si modificano o si inseriscono nuove righe.</li>
+                <li>È prevista una doppia conferma anche per l’eliminazione tramite tasto destro; una terza conferma, aggiuntiva, è protetta da password (diversa da quella abituale).</li>
+              </ul>
+
+              <img src="../assets/impostazioni/impostazioniStampe.png">
+
+              <p><b>Motivazioni dell’intervento:</b></p>
+              <ul>
+                <li>È stato riscontrato che le impostazioni di questa griglia vengono talvolta modificate o eliminate senza un’adeguata consapevolezza delle conseguenze, generando problematiche nella gestione di funzionalità collegate, come ad esempio le <b>API</b>.  
+                Qualora una riga possa sembrare incoerente con l’attività in corso (ad esempio durante la configurazione delle etichette dei bancali), <u>non deve essere modificata</u>, in quanto non è correlata al problema specifico.</li>
+
+                <li>Nel caso in cui il nome di un report coincida con il report stesso, la configurazione è da considerarsi corretta: il collegamento con altri dati avviene infatti proprio tramite il nome.  
+                Inoltre, è opportuno sottolineare che alcune configurazioni particolari non riportano un utente associato, in quanto si tratta di impostazioni o configurazioni automatiche.</li>
+              </ul>
+
+              <p><b>Conclusioni:</b></p>
+              <p>Le configurazioni di questa sezione non rappresentano soltanto stampe automatiche interne a <i>Elite</i>, ma svolgono anche la funzione di parametri per altri moduli e funzionalità.  
+              È pertanto fondamentale limitarsi a modificare o gestire esclusivamente ciò che è conosciuto e chiaramente identificato, come ad esempio la configurazione <b>EtichettaBancali</b>.</p>
+            </section>
+          </div>
+        </div>
+      </details>
+
+
+      <details>
         <summary>2025-09-25</summary>
 
         <div class="card">
