--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -17,29 +17,36 @@
     <section>
       <h2>🆕 Novità recenti</h2>
 
-    <details open>
+      <details open>
         <summary>2025-10-03</summary>
 
         <div class="card">
           <div class="card-title">Caricamento Veloce Conferme Tramite Griglia</div>
           <div class="card-body">
             <section>
-              <p>C’è una funzione attivabile che permette all’interno dei viaggi di inserire, volendo anche modificare, le conferme tramite una griglia di inserimento rapido.</p>
+              <p>C’è una funzione attivabile che permette all’interno dei viaggi di inserire, volendo anche modificare,
+                le conferme tramite una griglia di inserimento rapido.</p>
               <img src="../assets/viaggi/grigliarapida01.png" width="400">
               <p>Nel viaggio compare questo tasto</p>
               <img src="../assets/viaggi/grigliarapida02.png" width="400">
-              <p>E’ possibile inserire i dati nella griglia, ricercare Cliente,Mittente,Destinatario da menù a discesa</p>
+              <p>E’ possibile inserire i dati nella griglia, ricercare Cliente,Mittente,Destinatario da menù a discesa
+              </p>
               <img src="../assets/viaggi/grigliarapida03.png" width="400">
-              <p>Al termine con il tasto salva si memorizzano le righe, creando la conferma, con tratta, ed abbinandola al viaggio.
-                  Per la configurazione delle colonne utilizzabili, c’è un apposito pannello, che permette di omettere e ordinare. Ulteriori campi vanno valutati, soprattutto perché è da capire da dove devono leggere eventuali liste collegate (tipo mittenti da lista).</p>
+              <p>Al termine con il tasto salva si memorizzano le righe, creando la conferma, con tratta, ed abbinandola
+                al viaggio.
+                Per la configurazione delle colonne utilizzabili, c’è un apposito pannello, che permette di omettere e
+                ordinare. Ulteriori campi vanno valutati, soprattutto perché è da capire da dove devono leggere
+                eventuali liste collegate (tipo mittenti da lista).</p>
               <img src="../assets/viaggi/grigliarapida04.png" width="400">
               <p>Ad ora con Bancali, viene inserita 1 riga prodotto con la quantità inserita.
-                  Per il prezzo, viene inserita un riga di prezzo manuale con quantità 1.
-                  </p>
+                Per il prezzo, viene inserita un riga di prezzo manuale con quantità 1.
+              </p>
             </section>
+          </div>
 
-        <details>
+      </details>
 
+      <details>
         <summary>2025-10-02</summary>
 
         <div class="card">
