--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -16,7 +16,25 @@
 
     <section>
       <h2>🆕 Novità recenti</h2>
- <details open>
+      
+      <details open>
+        <summary>2025-10-14</summary>
+
+        <div class="card">
+          <div class="card-title">Aiuto risoluzioni problemi satellitari</div>
+          <div class="card-body">
+            <section>
+              <p>
+                All'interno della pagina dei <a href="../Satellitari/satellitari-normies.html">sistemi satellitari</a>
+                nel Capitolo "Debug" è possibile raggiungere una sezione di aiuto per la risoluzione dei problemi più comuni.<br/>
+                <a href="../Satellitari/DebugSatellitariIssues.html">DebugSatellitariIssues</a>
+              </p>
+            </section>
+          </div>
+
+      </details>
+
+      <details>
         <summary>2025-10-08</summary>
 
         <div class="card">
