--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -30,6 +30,21 @@
               <p>Tutte queste come scritto in precedenza per un altra modifica possono essere definite in anagrafica</p>
             </section>
           </div>
+        </div>
+
+        <div class="card">
+          <div class="card-title">Filtro zona arrivo planner</div>
+          <div class="card-body">
+            <section>
+              <p>E' stato introdotto il filtro zona di arrivo.</p>
+              <p>Questo filtra nel campo <strong>Verso</strong> del viaggio che e' <strong>autogenerato</strong> dal
+                viaggio al salvataggio in base alla zona dell'ultimo poi</p>
+              <img src="../assets/pianificazione/filtroZonaArrivo.png" width="auto">
+              <p>NB: Il filtro non sarà retroattivo per i viaggi già esistenti a meno che non vengano risalvati.</p>
+              <p><strong>IMPORTANTE</strong> per il corretto funzionamento vanno impostate bene le zone nel planner</p>
+            </section>
+          </div>
+        </div>
       </details>
 
       <details>
@@ -47,35 +62,37 @@
               </p>
             </section>
           </div>
+        </div>
 
 
-          <div class="card">
-            <div class="card-title">Bollo virtuale automatico in fattura elettronica</div>
-            <div class="card-body">
-              <section>
-                <p>
-                  Nel modulo fatturazione, nelle impostazioni avanzate c’è una nuova voce:<br />
-                  <img src="../assets/Fatturazione/bollovituale01.png" width="400">
-                  Attiva il bollo virtuale automatico in fattura elettronica:
-                  In anagrafica cliente, nella finestra dell'iva/esenzioni si vedrà una colonna che si chiama
-                  AttivaPerBollo', (naturalmente ci devono essere anche i codici, CodTip_IVA_FE)
-                  <br />
-                  <img src="../assets/Fatturazione/bollovituale02.png" width="400">
-                  <img src="../assets/Fatturazione/bollovituale03.png" width="400">
-                <p>
-                  che se spuntata permetterà il conteggio dell'importo esente (es. N1, N2.1,..) fino al
-                  raggiungimento/superamento dell'importo di 77.47 per far scattare il bollo virtuale
-                  automaticamente.<br />
-                  <img src="../assets/Fatturazione/bollovituale04.png" width="400">
-                <p>Nel modulo trasferimento tracciati nel momento in cui si creeranno le fatture si aprirà la solita
-                  finestra di accettazione, in questo caso però, la spunta ‘Bollo Virtuale‘ non ci sarà più<br />
+        <div class="card">
+          <div class="card-title">Bollo virtuale automatico in fattura elettronica</div>
+          <div class="card-body">
+            <section>
+              <p>
+                Nel modulo fatturazione, nelle impostazioni avanzate c’è una nuova voce:<br />
+                <img src="../assets/Fatturazione/bollovituale01.png" width="400">
+                Attiva il bollo virtuale automatico in fattura elettronica:
+                In anagrafica cliente, nella finestra dell'iva/esenzioni si vedrà una colonna che si chiama
+                AttivaPerBollo', (naturalmente ci devono essere anche i codici, CodTip_IVA_FE)
+                <br />
+                <img src="../assets/Fatturazione/bollovituale02.png" width="400">
+                <img src="../assets/Fatturazione/bollovituale03.png" width="400">
+              <p>
+                che se spuntata permetterà il conteggio dell'importo esente (es. N1, N2.1,..) fino al
+                raggiungimento/superamento dell'importo di 77.47 per far scattare il bollo virtuale
+                automaticamente.<br />
+                <img src="../assets/Fatturazione/bollovituale04.png" width="400">
+              <p>Nel modulo trasferimento tracciati nel momento in cui si creeranno le fatture si aprirà la solita
+                finestra di accettazione, in questo caso però, la spunta ‘Bollo Virtuale‘ non ci sarà più<br />
 
-                  E' IMPORTANTISSIMO selezionare la voce attiva per bollo in iva/esenzioni; se non viene fatto, il bollo
-                  virtuale NON VIENE INTEGRATO nelle fatture, poiché con questa funzione il bollo manuale viene
-                  DISABILITATO.
-                  <br />
-              </section>
-            </div>
+                E' IMPORTANTISSIMO selezionare la voce attiva per bollo in iva/esenzioni; se non viene fatto, il bollo
+                virtuale NON VIENE INTEGRATO nelle fatture, poiché con questa funzione il bollo manuale viene
+                DISABILITATO.
+                <br />
+            </section>
+          </div>
+        </div>
 
       </details>
 
