Considera Viaggi Compresi

--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -21,6 +21,19 @@
         <summary>2025-10-14</summary>
 
         <div class="card">
+          <div class="card-title">Considera Viaggi Compresi</div>
+          <div class="card-body">
+            <section>
+              <p>Nel Riepilogo vengono presi in considerazione gli importi delle conferme che cadono nel periodo di
+                riferimento.</p>
+              <p>Ad esempio se ho una conferma che parte dal 31° gennaio 2025 e termina il 1 febbraio 2025, verrà
+                considerata nel riepilogo di febbraio.</p>
+              <img src="../assets/riepilogo/consideraViaggiCompresi.png" width="auto">
+            </section>
+          </div>
+        </div>
+
+        <div class="card">
           <div class="card-title">Cambiamento categorie planner</div>
           <div class="card-body">
             <section>
