--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
         >
           🆕 Sezione delle Novità
         </button>
+
+        <button
+          onclick="window.location.href='./aggiornamenti/versione80100.html'"
+          class="bottone-novita">
+          🆕 Aggiornamento Versione 8.01.00 
+        </button>
       </section>
 
       <section>
