integrazione mappa manuale

--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -17,7 +17,28 @@
     <section>
       <h2>🆕 Novità recenti</h2>
 
+
       <details open>
+        <summary>2025-11-03</summary>
+
+        <div class="card">
+          <div class="card-title">Mappa Manuale</div>
+          <div class="card-body">
+            <section>
+              <p>Le mappe manuali sono state reintegrate nelle mappe standard</p>
+              <br />
+              <p>Se esiste gia' un percorso carica la mappa standard, altrimenti se non esiste o se viene premuto
+                aggiorna si puo' trascinare il percorso.</p>
+              <br />
+              <p>L'algoritmo di routing legato e' lo stesso di ogni altro processo quindi carica il percoso i tempi e i
+                pedaggi sempre nello stesso modo.</p>
+            </section>
+          </div>
+        </div>
+
+      </details>
+
+      <details>
         <summary>2025-10-14</summary>
 
         <div class="card">
